# coloseum.cytherpunks.cryptostones

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  MASTERCARD_INTEGRATION.md  README.md  aimpactEditorScript.js  deploy.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
CryptoBlueBlocks/: README.md  index.html  package-lock.json  package.json
CryptoBlueBlocks/src/: App.tsx  index.css
CryptoBlueBlocks/src/components/: FeedCard.tsx
examples/: demo.ts
programs/user_factory/: Cargo.toml
programs/user_factory/src/: lib.rs
programs/user_profile/: Cargo.toml
programs/user_profile/src/: lib.rs
programs/vendor_factory/: Cargo.toml
programs/vendor_factory/src/: lib.rs
programs/vendor_profile/: Cargo.toml
programs/vendor_profile/src/: lib.rs
scripts/: deploy.sh
src/: App.tsx  index.css  main.tsx
src-anchor/: Anchor.toml
src-anchor/programs/src/: Cargo.toml
src-anchor/tests/: src.ts
src/api/: feeds.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/[login]/: page.tsx
src/app/components/: AlgorithmCard.tsx  Landing.tsx  LoginButton.tsx  MastercardPayment.tsx  Navbar.tsx  Privy.tsx  (+1 more)
src/components/: AgentCard.tsx  AgentMarketplace.tsx  ArchitectureDiagram.tsx  Footer.tsx  Hero.tsx  LiveFeedsGrid.tsx  MarketPlaceData.tsx  MobileNav.tsx  NavBar.tsx  OracleData.tsx  WalletProvider.tsx
src/config/: transak.ts
src/contexts/: PaymentContext.tsx  WalletContext.tsx
src/services/: SmartContractService.ts
src/styles/: globals.css
tests/: user-factory.ts  vendor-system.ts
(+3 files in other folders)
