[package]
name = "crypto-blue-blocks-solana-smart-contract-vendors"
version = "0.1.0"
description = "Solana Anchor smart contract system for managing vendors on-chain"
edition = "2021"

[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
