[package]
name = "vendor-profile"
version = "0.1.0"
description = "Vendor Profile Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vendor_profile"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
vendor-factory = { path = "../vendor_factory" }
